Fix small CSS issue with user gravatar spacing

--- a/app/sass/users.sass
+++ b/app/sass/users.sass
@@ -21,5 +21,11 @@ section#users_index
 // ===== users#show ======
 
 section#users_show
+  section.details
+    dd.avatar
+      height: 60px
+      width: 60px
+      img
+        display: block
   section.activities
     +box(3)
